# fastgrep

./: .gitignore  AI_AGENT_GREP_USECASES.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  ENVIRONMENT.md  GNU_GREP_COMPAT.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml
.claude/: settings.local.json
.github/workflows/: _build.yml  _lint.yml  _test.yml  ci.yml  publish.yml  release.yml
bench_baseline/: README.md  baseline.md  baseline_bench.rs  run_baseline.sh
benches/: corpus.rs  grep_bench.rs
docs/: overview.mmd  parallel.mmd  pattern.mmd  search-pipeline.mmd  trigram.mmd
src/: cache.rs  cli.rs  lib.rs  output.rs  pattern.rs  searcher.rs  threadpool.rs  trigram.rs  walker.rs
tests/: basic_matching.rs  binary.rs  context.rs  edge_cases.rs  files_recursive.rs  flags.rs  integration.rs  json.rs  only_matching.rs  regression.rs  stdin.rs
tests/common/: mod.rs
