[package]
name = "fastgrep"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
ignore = "0.4"
memmap2 = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "grep"

[[bench]]
name = "grep_bench"
harness = false
