[package]
name = "fastgrep"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
dirs = "6"
ignore = "0.4"
itoa = "1"
memchr = "2"
memmap2 = "0.9"
postcard = { version = "1", features = ["alloc"] }
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "grep"

[[bench]]
name = "grep_bench"
harness = false
