[package]
name = "fastgrep"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Fast parallel grep with SIMD-accelerated search and trigram indexing"
repository = "https://github.com/awnion/fastgrep"
keywords = ["grep", "search", "parallel", "simd", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
bitcode = { version = "0.6", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
itoa = "1"
kanal = "0.1"
memchr = "2"
memmap2 = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "grep"

[[bench]]
name = "grep_bench"
harness = false
